--- a/Solutions/Corvus.Json.Specs/Corvus.Json.Specs.csproj
+++ b/Solutions/Corvus.Json.Specs/Corvus.Json.Specs.csproj
@@ -37,16 +37,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <SpecFlowObsoleteCodeBehindFiles Remove="Features\AdditionalSchema\Draft201909\derived-numeric-type.feature.cs" />
-	  <SpecFlowObsoleteCodeBehindFiles Remove="Features\AdditionalSchema\Draft201909\fixed-size-numeric-arays.feature.cs" />
-	  <SpecFlowObsoleteCodeBehindFiles Remove="Features\AdditionalSchema\Draft202012\derived-numeric-type - Copy.feature.cs" />
-	  <SpecFlowObsoleteCodeBehindFiles Remove="Features\AdditionalSchema\Draft6\derived-numeric-type.feature.cs" />
-	  <SpecFlowObsoleteCodeBehindFiles Remove="Features\AdditionalSchema\Draft6\fixed-size-numeric-arrays.feature.cs" />
-	  <SpecFlowObsoleteCodeBehindFiles Remove="Features\AdditionalSchema\Draft7\derived-numeric-type.feature.cs" />
-	  <SpecFlowObsoleteCodeBehindFiles Remove="Features\AdditionalSchema\Draft7\fixed-size-numeric-arrays.feature.cs" />
-	</ItemGroup>
-
-	<ItemGroup>
 		<PackageReference Include="Corvus.Testing.SpecFlow.NUnit" Version="3.0.2" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
@@ -80,30 +70,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Compile Update="Features\AdditionalSchema\Draft201909\derived-numeric-type.feature.cs">
-	    <DependentUpon>%(Filename)</DependentUpon>
-	  </Compile>
-	  <Compile Update="Features\AdditionalSchema\Draft201909\fixed-size-numeric-arrays.feature.cs">
-	    <DependentUpon>fixed-size-numeric-arrays.feature</DependentUpon>
-	  </Compile>
-	  <Compile Update="Features\AdditionalSchema\Draft202012\derived-numeric-type-net80.feature.cs">
-	    <DependentUpon>derived-numeric-type-net80.feature</DependentUpon>
-	  </Compile>
-	  <Compile Update="Features\AdditionalSchema\Draft6\derived-numeric-type.feature.cs">
-	    <DependentUpon>%(Filename)</DependentUpon>
-	  </Compile>
-	  <Compile Update="Features\AdditionalSchema\Draft6\fixed-size-numeric-arrays.feature.cs">
-	    <DependentUpon>%(Filename)</DependentUpon>
-	  </Compile>
-	  <Compile Update="Features\AdditionalSchema\Draft7\derived-numeric-type.feature.cs">
-	    <DependentUpon>%(Filename)</DependentUpon>
-	  </Compile>
-	  <Compile Update="Features\AdditionalSchema\Draft7\fixed-size-numeric-arrays.feature.cs">
-	    <DependentUpon>%(Filename)</DependentUpon>
-	  </Compile>
-	</ItemGroup>
-
-	<ItemGroup>
 		<None Update="appsettings.json">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
@@ -119,38 +85,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <SpecFlowFeatureFiles Update="Features\AdditionalSchema\Draft201909\derived-numeric-type.feature">
-	    <Visible>$(UsingMicrosoftNETSdk)</Visible>
-	    <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-	  </SpecFlowFeatureFiles>
-	  <SpecFlowFeatureFiles Update="Features\AdditionalSchema\Draft201909\fixed-size-numeric-arrays.feature">
-	    <Visible>$(UsingMicrosoftNETSdk)</Visible>
-	    <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-	  </SpecFlowFeatureFiles>
-	  <SpecFlowFeatureFiles Update="Features\AdditionalSchema\Draft202012\derived-numeric-type-net80.feature">
-	    <Visible>$(UsingMicrosoftNETSdk)</Visible>
-	    <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-	  </SpecFlowFeatureFiles>
-	  <SpecFlowFeatureFiles Update="Features\AdditionalSchema\Draft6\derived-numeric-type.feature">
-	    <Visible>$(UsingMicrosoftNETSdk)</Visible>
-	    <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-	  </SpecFlowFeatureFiles>
-	  <SpecFlowFeatureFiles Update="Features\AdditionalSchema\Draft6\fixed-size-numeric-arrays.feature">
-	    <Visible>$(UsingMicrosoftNETSdk)</Visible>
-	    <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-	  </SpecFlowFeatureFiles>
-	  <SpecFlowFeatureFiles Update="Features\AdditionalSchema\Draft7\derived-numeric-type.feature">
-	    <Visible>$(UsingMicrosoftNETSdk)</Visible>
-	    <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-	  </SpecFlowFeatureFiles>
-	  <SpecFlowFeatureFiles Update="Features\AdditionalSchema\Draft7\fixed-size-numeric-arrays.feature">
-	    <Visible>$(UsingMicrosoftNETSdk)</Visible>
-	    <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-	  </SpecFlowFeatureFiles>
-	</ItemGroup>
-
-	<ItemGroup>
 	  <Folder Include="Features\JsonSchema\" />
+	  <Folder Include="Features\SyncGenerator\" />
 	</ItemGroup>
 
 
