Added specs for the explicit name basis code generation.

--- a/Solutions/Corvus.Json.Specs/Corvus.Json.Specs.csproj
+++ b/Solutions/Corvus.Json.Specs/Corvus.Json.Specs.csproj
@@ -86,6 +86,7 @@
 
 	<ItemGroup>
 	  <Folder Include="Features\JsonSchema\" />
+	  <Folder Include="Features\ExplicitTypeName\" />
 	  <Folder Include="Features\SyncGenerator\" />
 	</ItemGroup>
 
