Initial codegen of draft4 generator.

--- a/Solutions/Corvus.Json.JsonSchema.Draft4/Corvus.Json.JsonSchema.Draft4.csproj
+++ b/Solutions/Corvus.Json.JsonSchema.Draft4/Corvus.Json.JsonSchema.Draft4.csproj
@@ -34,4 +34,8 @@
     <PackageReference Update="Roslynator.Analyzers" Version="4.11.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Draft4\" />
+  </ItemGroup>
+
 </Project>
