Pass all draft4 specs.

--- a/Solutions/Corvus.JsonSchema.SpecGenerator/JsonSchemaOrgTestSuiteSelector.jsonc
+++ b/Solutions/Corvus.JsonSchema.SpecGenerator/JsonSchemaOrgTestSuiteSelector.jsonc
@@ -15,7 +15,8 @@
                     "excludeFromThisDirectory": [
                         "bignum\\.json",
                         "ecmascript-regex\\.json",
-                        "non-bmp-regex\\.json"
+                        "non-bmp-regex\\.json",
+                        "zeroTerminatedFloats\\.json"
                     ],
                     "subdirectories": {
                         "format": {
