--- a/Solutions/Corvus.Json.CodeGenerator/Corvus.Json.CodeGenerator.csproj
+++ b/Solutions/Corvus.Json.CodeGenerator/Corvus.Json.CodeGenerator.csproj
@@ -23,6 +23,7 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\Corvus.Json.CodeGeneration.201909\Corvus.Json.CodeGeneration.201909.csproj" />
 	  <ProjectReference Include="..\Corvus.Json.CodeGeneration.202012\Corvus.Json.CodeGeneration.202012.csproj" />
+	  <ProjectReference Include="..\Corvus.Json.CodeGeneration.7\Corvus.Json.CodeGeneration.7.csproj" />
 	  <ProjectReference Include="..\Corvus.Json.CodeGeneration.CSharp\Corvus.Json.CodeGeneration.CSharp.csproj" />
 	</ItemGroup>
 
