--- a/Solutions/Corvus.JsonPatch.Benchmarking/Corvus.JsonPatch.Benchmarking.csproj
+++ b/Solutions/Corvus.JsonPatch.Benchmarking/Corvus.JsonPatch.Benchmarking.csproj
@@ -14,7 +14,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="BenchmarkDotNet" Version="0.13.12" />
+    <PackageReference Include="System.Text.Json" Version="8.0.4" />
+    <PackageReference Include="BenchmarkDotNet" Version="0.13.12" />
 		<PackageReference Include="BenchmarkDotNet.Diagnostics.Windows" Version="0.13.12" />
 		<PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.12">
 			<PrivateAssets>all</PrivateAssets>
