Path truncation support.

--- a/Solutions/Sandbox/Sandbox.csproj
+++ b/Solutions/Sandbox/Sandbox.csproj
@@ -15,6 +15,7 @@
 	
 	<ItemGroup>
 	  <ProjectReference Include="..\Corvus.Json.Benchmarking\Corvus.Json.Benchmarking.csproj" />
+	  <ProjectReference Include="..\Corvus.Json.CodeGenerator\Corvus.Json.CodeGenerator.csproj" />
 	  <ProjectReference Include="..\Corvus.Json.ExtendedTypes\Corvus.Json.ExtendedTypes.csproj" />
 	  <ProjectReference Include="..\Corvus.Json.JsonSchema.Draft202012\Corvus.Json.JsonSchema.Draft202012.csproj" />
 	  <ProjectReference Include="..\Corvus.Json.Patch\Corvus.Json.Patch.csproj" />
