Continue to generate our Corvus.Json.ExtendedTypes from our code generator.
Added JsonRegex
Included all the 'content' types in the generation
Added specs for the exsting content types (revealing a bug in EqualsUtf8Bytes)

--- a/Solutions/Sandbox/generatorconfig.json
+++ b/Solutions/Sandbox/generatorconfig.json
@@ -50,6 +50,10 @@
         },
         {
             "schemaFile": "./json-extended-types.json",
+            "rootPath": "#/$defs/JsonBase64StringPre201909"
+        },
+        {
+            "schemaFile": "./json-extended-types.json",
             "rootPath": "#/$defs/JsonContent"
         },
         {
