--- a/Solutions/Corvus.Json.Specs/Corvus.Json.Specs.csproj
+++ b/Solutions/Corvus.Json.Specs/Corvus.Json.Specs.csproj
@@ -158,4 +158,8 @@
 		<PackageReference Update="Roslynator.Analyzers" Version="4.12.4" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Features\JsonModel\Base64StringDecoding\" />
+	</ItemGroup>
+
 </Project>
