--- a/Solutions/Corvus.Json.Patch.SpecGenerator/Corvus.Json.Patch.SpecGenerator.csproj
+++ b/Solutions/Corvus.Json.Patch.SpecGenerator/Corvus.Json.Patch.SpecGenerator.csproj
@@ -11,11 +11,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.12">
+		<PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.13">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.12.0-1.final" />
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.11.0" />
 		<PackageReference Include="Mono.TextTemplating" Version="2.3.1" />
 	</ItemGroup>
 
