Renamed Corvus.JsonReference to Corvus.Json.JsonReference.

--- a/Solutions/Corvus.Json.CodeGeneration/Corvus.Json.CodeGeneration.csproj
+++ b/Solutions/Corvus.Json.CodeGeneration/Corvus.Json.CodeGeneration.csproj
@@ -38,7 +38,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Corvus.JsonReference\Corvus.JsonReference.csproj" />
+    <ProjectReference Include="..\Corvus.Json.JsonReference\Corvus.Json.JsonReference.csproj" />
   </ItemGroup>
 
   <ItemGroup>
