--- a/Solutions/Corvus.Json.SourceGenerator/Corvus.Json.SourceGenerator.csproj
+++ b/Solutions/Corvus.Json.SourceGenerator/Corvus.Json.SourceGenerator.csproj
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <IsRoslynComponent>true</IsRoslynComponent>
     <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
+    <IncludeSymbols>false</IncludeSymbols>
   </PropertyGroup>
 
   <PropertyGroup Label="NuGet">
